# cendry

./: CHANGELOG.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  filters.md  getting-started.md  index.md  models.md  queries.md  serialization.md  type-validation.md
docs/explanation/: architecture.md  comparison.md  design-decisions.md  firestore.md  index.md
docs/how-to/: aliases.md  async.md  auto-timestamps.md  batch-and-transactions.md  document-ids.md  filtering.md  index.md  migrate-datastore-to-native.md  models.md  serialization.md  testing.md  ttl.md  type-validation.md  writing.md
docs/reference/: context.md  exceptions.md  filters.md  index.md  models.md  query.md  serialization.md  types.md
docs/stylesheets/: fire.css
docs/tutorials/: async.md  first-steps.md  index.md  querying.md  writing.md
src/cendry/: __init__.py  _writes.py  backend.py  batch.py  context.py  exceptions.py  filters.py  metadata.py  model.py  query.py  serialize.py  transaction.py  types.py
src/cendry/backends/: __init__.py  datastore.py  firestore.py  types.py
tests/: conftest.py  test_backend_types.py  test_batch.py  test_bdd_aliases.py  test_bdd_batch.py  test_bdd_context.py  test_bdd_enums.py  test_bdd_filters.py  test_bdd_metadata.py  test_bdd_model.py  test_bdd_query.py  test_bdd_query_object.py  test_bdd_transactions.py  test_bdd_type_handlers.py  test_bdd_types.py  test_bdd_write_operations.py  test_context.py  test_datastore_backend.py  test_dx_v2.py  test_exceptions.py  test_filters.py  test_firestore_backend.py  test_handler_integration.py  test_metadata.py  test_model.py  test_public_api.py  test_query.py  test_query_object.py  test_serialize.py  test_transaction.py  test_types.py
tests/features/: aliases.feature  batch.feature  context.feature  enums.feature  filters.feature  metadata.feature  model.feature  query.feature  query_object.feature  transactions.feature  type_handlers.feature  types.feature  write_operations.feature
tests/integration/: conftest.py  test_async.py  test_async_advanced.py  test_auto_timestamps.py  test_batch_and_txn.py  test_bdd_batch_and_txn.py  test_bdd_crud.py  test_crud.py  test_datastore.py  test_field_types.py  test_filters_and_types.py  test_queries_advanced.py  test_query.py  test_serialization.py  test_transactions_advanced.py
tests/integration/features/: batch_and_transactions.feature  crud.feature
