[project]
name = "cendry"
version = "0.0.1"
description = "A Firestore ODM for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-firestore>=2.19",
    "anyio>=4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-bdd>=8",
    "anyio>=4",
    "mypy>=1",
    "ty",
    "coverage>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cendry"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["cendry"]
mypy_path = "src"

[tool.coverage.run]
source = ["cendry"]

[tool.coverage.report]
fail_under = 100
show_missing = true
